# ds-transcriber

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: transcribe.rs
src/: config.rs  lib.rs  model.rs  stream.rs  transcriber.rs
