[package]
name = "ds-transcriber"
version = "0.1.3"
authors = ["Rodney Kanjala <dev@kanjala.com>"]
edition = "2021"
description = "A crate using DeepSpeech bindings to convert mic audio from speech to text"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.3"
deepspeech = "0.9.0"
nnnoiseless = "0.3.2"
log = "0.4"
anyhow = "1"
