[package]
name = "ds-transcriber"
version = "1.0.0-beta.0"
authors = ["Rodney Kanjala <dev@kanjala.com>"]
edition = "2021"
description = "A crate using DeepSpeech bindings to convert mic audio from speech to text"
license = "MIT"
repository = "https://github.com/kawaki-san/ds-transcriber"
keywords = ["transcription", "speech-to-text", "microphone", "record", "speech-detection"]
categories = ["accessibility", "multimedia", "multimedia::audio", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.3"
deepspeech = "0.9.0"
nnnoiseless = { version = "0.3.2", optional = true }
log = "0.4"
anyhow = "1"

[features]
default = []
denoise = ["nnnoiseless"]
full = ["denoise"]

[dev-dependencies]
clap = { version = "3", features = ["cargo"] }

[[example]]
name = "transcribe"
